Bug 1457443 - Don't expect WebRender windows if WebRender isn't built. r=milan

MozReview-Commit-ID: 2i25nGMsvxE

--HG--
extra : rebase_source : 9bdd28048504bcde5150b252777f46ab523ca1ff